changes for setting proper dependencies
SVN-Revision: 290

--- a/build-custom.properties
+++ b/build-custom.properties
@@ -51,8 +51,8 @@
 #copy-server-file.custom.use=yes
 #copy-template-files.main.ignore=yes
 #copy-template-files.custom.use=yes
-#create-control-files.main.ignore=yes
-#create-control-files.custom.use=yes
+#copy-control-files.main.ignore=yes
+#copy-control-files.custom.use=yes
 #create-output-dirs.main.ignore=yes
 #create-output-dirs.custom.use=yes
 #create-project-dirs.main.ignore=yes
