--- a/build.codegen.properties
+++ b/build.codegen.properties
@@ -1,17 +1,31 @@
 sdk.debug=off
-#Source Folders
+
+#################################################################################
+#
+#  SDK SOURCE FOLDERS
+#
+#################################################################################
+
 dir.src=src
 dir.lib=lib
 dir.model=models/xmi
 
-#Custom Source Folders
+#################################################################################
+#
+#  CUSTOM SOURCE FOLDERS
+#
+#################################################################################
 dir.src.custom=custom
 dir.src.custom.project=${dir.src.custom}/${project_name}
 dir.src.custom.beans=${dir.src.custom.project}
 dir.src.custom.orm=${dir.src.custom.project}
 dir.src.custom.lib=${dir.src.custom.project}/lib
 
-#Configuration File Folders
+#################################################################################
+#
+#  CONFIGURATION FILES SOURCE FOLDERS
+#
+#################################################################################
 dir.conf=conf
 dir.conf.scripts=${dir.conf}/build-scripts
 dir.conf.template=${dir.conf}/codegen/template
@@ -25,13 +39,21 @@ dir.conf.resources.client=${dir.conf}/resources/client
 dir.conf.demo.client=${dir.conf}/demo/client
 dir.conf.demo.thickclient=${dir.conf}/demo/thick-client
 
-#Codegen Framework Folders
+#################################################################################
+#
+#  SDK CODEGEN FOLDERS
+#
+#################################################################################
 dir.codegen.src=${dir.src}
-dir.codegen.temp=${dir.output}/temp/codegen
+dir.codegen.temp=${dir.output.project}/temp/codegen
 dir.codegen.temp.src=${dir.codegen.temp}/src
 dir.codegen.temp.build=${dir.codegen.temp}/build
 
-#Output folders
+#################################################################################
+#
+#  SDK OUTPUT FOLDERS
+#
+#################################################################################
 dir.output=output
 dir.output.project=${dir.output}/${project_name}
 dir.output.project.src=${dir.output.project}/src
@@ -45,6 +67,7 @@ dir.output.project.classes=${dir.output.project}/classes
 dir.output.conf=${dir.output.project}/${dir.conf}
 dir.output.conf.scripts=${dir.output.project}/${dir.conf.scripts}
 dir.output.conf.control=${dir.output.project}/${dir.conf.control}
+dir.output.conf.template=${dir.output.project}/${dir.conf.template}
 dir.output.conf.spring=${dir.output.project}/${dir.conf.spring}
 dir.output.conf.hibernate=${dir.output.project}/${dir.conf.hibernate}
 dir.output.conf.web=${dir.output.project}/${dir.conf.web}
@@ -79,18 +102,6 @@ file.control.systemProperties=CORESystem.properties
 file.control.wsdd=wsddUtil.xml
 file.control.xmlmappinggeneration=castormappinggeneration.xml
 
-file.demo.source=ExampleTestClient.java
-file.demo.class=TestClient
-file.demo.class.source=${file.demo.class}.java
-
-file.demoxml.source=ExampleTestXML.java
-file.demoxml.class=TestXML
-file.demoxml.class.source=${file.demoxml.class}.java
-
-file.demoWS.source=ExampleWSTestClient.java
-file.demoWS.class=WSTestClient
-file.demoWS.class.source=${file.demoWS.class}.java
-
 file.framework.package=codegen.jar
 
 file.wsdd.deploy=deploy.wsdd
@@ -102,6 +113,7 @@ file.project.client.zip=${project_name}-client.zip
 
 file.license=license.txt
 
+file.logger.properties=log4j.properties
 file.orm.properties=hibernate.properties
 file.orm.configuration=orm1.cfg.xml
 file.orm2.configuration=orm2.cfg.xml
@@ -109,7 +121,7 @@ file.server.config.wsdd=server-config.wsdd
 
 file.cache.properties=ehcache.xml
 file.dao.configuration=DAOConfig.xml
-
+file.spring.configuration=SDKSpringBeanConfig.xml
 #################################################################################
 #
 #  CUSTOM BUILD DIRECTIVES
