Included deploy targets and package sdk target
SVN-Revision: 294

--- a/build.codegen.properties
+++ b/build.codegen.properties
@@ -81,6 +81,7 @@ dir.output.conf.demo.thickclient=${dir.output.project}/${dir.conf.demo.thickclie
 #  FILENAME PROPERTIES
 #
 #################################################################################
+file.output.zip=cacoresdk.zip
 
 file.conf=${dir.conf}/deploy.properties
 
