Added custom tags for packaging and added tag for javadoc generation
SVN-Revision: 298

--- a/build.codegen.properties
+++ b/build.codegen.properties
@@ -63,6 +63,7 @@ dir.output.project.package=${dir.output.project}/package
 dir.output.project.package.client=${dir.output.project.package}/client
 dir.output.project.package.thickclient=${dir.output.project.package}/thick-client
 dir.output.project.classes=${dir.output.project}/classes
+dir.output.project.doc=${dir.output.project}/doc
 
 dir.output.conf=${dir.output.project}/${dir.conf}
 dir.output.conf.scripts=${dir.output.project}/${dir.conf.scripts}
