--- a/conf/web/WEB-INF/web.xml
+++ b/conf/web/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 
 <!DOCTYPE web-app
-    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
-    "http://java.sun.com/j2ee/dtds/web-app_2.2.dtd">
+PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+"http://java.sun.com/j2ee/dtds/web-app_2_3.dtd">
 
 
 <web-app>
@@ -23,6 +23,23 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
 	</context-param>
+
+	<filter>
+		<filter-name>CSMHTTPFilter</filter-name>
+		<display-name>CSMHTTPFilter</display-name>
+		<description></description>
+		<filter-class>gov.nih.nci.system.proxy.CSMHTTPFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>CSMHTTPFilter</filter-name>
+		<url-pattern>/GetXML</url-pattern>
+	</filter-mapping>
+    
+	<filter-mapping>
+		<filter-name>CSMHTTPFilter</filter-name>
+		<url-pattern>/GetHTML</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>context</servlet-name>
@@ -55,7 +72,7 @@
     </servlet>
 	<servlet>
     	<servlet-name>Happy</servlet-name>
-		<jsp-file>Happy.jsp</jsp-file>     	
+		<jsp-file>/Happy.jsp</jsp-file>     	
     </servlet>
     
 	<servlet-mapping>
@@ -92,22 +109,5 @@
     	<servlet-name>Happy</servlet-name>
       	<url-pattern>/Happy</url-pattern>
     </servlet-mapping>
-
-	<filter>
-		<filter-name>CSMHTTPFilter</filter-name>
-		<display-name>CSMHTTPFilter</display-name>
-		<description></description>
-		<filter-class>gov.nih.nci.system.proxy.CSMHTTPFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>CSMHTTPFilter</filter-name>
-		<url-pattern>/GetXML</url-pattern>
-	</filter-mapping>
-    
-	<filter-mapping>
-		<filter-name>CSMHTTPFilter</filter-name>
-		<url-pattern>/GetHTML</url-pattern>
-	</filter-mapping>
 
 </web-app>
