Changed build properties file. Renamed build.codegen.xml to build.xml and removed build.codegen.xml from CVS
SVN-Revision: 336

--- a/build.properties
+++ b/build.properties
@@ -1,79 +1,88 @@
+sdk.debug=on
+
 #################################################################################
 #
-#  SDK FILEPATH PROPERTIES
-#
-#  The following properties are used by the SDK for both framework compilation 
-#  and model transformation and code generation.
+#  SDK SOURCE FOLDERS
 #
 #################################################################################
 
-dir.conf=conf
-dir.conf.xslt=${dir.conf}/xslt
-dir.demo=demo
-dir.demo.webservice=${dir.demo}/webservice
+dir.src=src
 dir.lib=lib
-dir.output=output
 dir.model=models/xmi
-dir.temp=temp
-dir.temp.zip=${dir.temp}/zip
 
+#################################################################################
+#
+#  CUSTOM SOURCE FOLDERS
+#
+#################################################################################
 dir.src.custom=custom
 dir.src.custom.project=${dir.src.custom}/${project_name}
 dir.src.custom.beans=${dir.src.custom.project}
 dir.src.custom.orm=${dir.src.custom.project}
-dir.src.custom.wsdd=${dir.src.custom.project}
-dir.src.custom.framework=${dir.src.custom.project}
-file.orm.configuration=${dir.src.custom.project}
-
-dir.framework.src=src
-
-dir.generator.build=${dir.output}/SDKCodeGenerator
-dir.generator.src=${dir.framework.src}   
-dir.generator.exception.src=${dir.framework.src}/gov/nih/nci/common/exception
-dir.generator.util.src=${dir.framework.src}/gov/nih/nci/common/util
-
-dir.output.package=${dir.output}/package
-dir.output.doc=${dir.output}/doc
-
+dir.src.custom.lib=${dir.src.custom.project}/lib
 
 #################################################################################
 #
-#  PROJECT FILEPATH PROPERTIES
-#
-#  The following properties are used by the SDK to generate the system defined
-#  in the deploy.properties settings.
+#  CONFIGURATION FILES SOURCE FOLDERS
 #
 #################################################################################
+dir.conf=conf
+dir.conf.scripts=${dir.conf}/build-scripts
+dir.conf.template=${dir.conf}/codegen/template
+dir.conf.control=${dir.conf}/codegen/control-files
+dir.conf.spring=${dir.conf}/spring
+dir.conf.hibernate=${dir.conf}/hibernate
+dir.conf.web=${dir.conf}/web
+dir.conf.webservice=${dir.conf}/webservice
+dir.conf.resources.server=${dir.conf}/resources/server
+dir.conf.resources.client=${dir.conf}/resources/client
+dir.conf.demo.client=${dir.conf}/demo/client
+dir.conf.demo.thickclient=${dir.conf}/demo/thick-client
 
+#################################################################################
+#
+#  SDK CODEGEN FOLDERS
+#
+#################################################################################
+dir.codegen.src=${dir.src}
+dir.codegen.temp=${dir.output.project}/temp/codegen
+dir.codegen.temp.src=${dir.codegen.temp}/src
+dir.codegen.temp.build=${dir.codegen.temp}/build
 
+#################################################################################
+#
+#  SDK OUTPUT FOLDERS
+#
+#################################################################################
+dir.output=output
 dir.output.project=${dir.output}/${project_name}
-dir.output.project.web-inf=${dir.output}/${project_name}/WEB-INF
-dir.output.project.build=${dir.output.project}/classes
-dir.output.project.client=${dir.output.project}/client
-dir.output.project.conf=${dir.output.project}/conf
-dir.output.project.doc=${dir.output.project}/doc
-dir.output.project.framework.src=${dir.output.project}/framework/src
-dir.output.project.framework.build=${dir.output.project}/framework/build
-dir.output.project.junit=${dir.output.project}/junit
-dir.output.project.orm=${dir.output.project}/orm/hibernate/
+dir.output.project.src=${dir.output.project}/src
+dir.output.project.web=${dir.output.project}/web
+dir.output.project.webinf=${dir.output.project.web}/WEB-INF
 dir.output.project.package=${dir.output.project}/package
-dir.output.project.package.server=${dir.output.project.package}/${web_server_name}
 dir.output.project.package.client=${dir.output.project.package}/client
-dir.output.project.package.client.conf=${dir.output.project.package.client}/conf
-dir.output.project.package.client.lib=${dir.output.project.package.client}/lib
-dir.output.project.src=${dir.output.project}/java
-dir.output.project.src.formatted=${dir.output.project}/java-formatted
-dir.output.project.templates=${dir.output.project}/templates/jet
-dir.output.project.xmlmapping=${dir.output.project.conf}
-dir.output.project.xmlschema=${dir.output.project}/schemas
+dir.output.project.package.thickclient=${dir.output.project.package}/thick-client
+dir.output.project.classes=${dir.output.project}/classes
+dir.output.project.doc=${dir.output.project}/doc
 
-
-
+dir.output.conf=${dir.output.project}/${dir.conf}
+dir.output.conf.scripts=${dir.output.project}/${dir.conf.scripts}
+dir.output.conf.control=${dir.output.project}/${dir.conf.control}
+dir.output.conf.template=${dir.output.project}/${dir.conf.template}
+dir.output.conf.spring=${dir.output.project}/${dir.conf.spring}
+dir.output.conf.hibernate=${dir.output.project}/${dir.conf.hibernate}
+dir.output.conf.web=${dir.output.project}/${dir.conf.web}
+dir.output.conf.webservice=${dir.output.project}/${dir.conf.webservice}
+dir.output.conf.resources.server=${dir.output.project}/${dir.conf.resources.server}
+dir.output.conf.resources.client=${dir.output.project}/${dir.conf.resources.client}
+dir.output.conf.demo.client=${dir.output.project}/${dir.conf.demo.client}
+dir.output.conf.demo.thickclient=${dir.output.project}/${dir.conf.demo.thickclient}
 #################################################################################
 #
 #  FILENAME PROPERTIES
 #
 #################################################################################
+file.output.zip=cacoresdk.zip
 
 file.conf=${dir.conf}/deploy.properties
 
@@ -95,18 +104,6 @@ file.control.systemProperties=CORESystem.properties
 file.control.wsdd=wsddUtil.xml
 file.control.xmlmappinggeneration=castormappinggeneration.xml
 
-file.demo.source=ExampleTestClient.java
-file.demo.class=TestClient
-file.demo.class.source=${file.demo.class}.java
-
-file.demoxml.source=ExampleTestXML.java
-file.demoxml.class=TestXML
-file.demoxml.class.source=${file.demoxml.class}.java
-
-file.demoWS.source=ExampleWSTestClient.java
-file.demoWS.class=WSTestClient
-file.demoWS.class.source=${file.demoWS.class}.java
-
 file.framework.package=codegen.jar
 
 file.wsdd.deploy=deploy.wsdd
@@ -118,6 +115,7 @@ file.project.client.zip=${project_name}-client.zip
 
 file.license=license.txt
 
+file.logger.properties=log4j.properties
 file.orm.properties=hibernate.properties
 file.orm.configuration=orm1.cfg.xml
 file.orm2.configuration=orm2.cfg.xml
@@ -125,20 +123,7 @@ file.server.config.wsdd=server-config.wsdd
 
 file.cache.properties=ehcache.xml
 file.dao.configuration=DAOConfig.xml
-
-
-#################################################################################
-#
-#  URL PROPERTIES
-#
-#################################################################################
-
-url.project.axisservice=http://${web_server_name}:${web_server_port}/${project_name}/ws/AxisServlet
-url.core.siw=http://cadsrsiw.nci.nih.gov
-#url.core.install.properties=file:///path//to///conf//download.properties
-file.core.install.properties=conf/download.properties
-
-
+file.spring.configuration=SDKSpringBeanConfig.xml
 #################################################################################
 #
 #  CUSTOM BUILD DIRECTIVES
@@ -151,5 +136,11 @@ file.core.install.properties=conf/download.properties
 file.build.custom=build-custom.xml
 file.properties.custom=build-custom.properties
 
-#file.build.custom=build-custom-cacore.xml
-#file.properties.custom=build-custom-cacore.properties
+
+#################################################################################
+#
+#  URL PROPERTIES
+#
+#################################################################################
+
+url.project.axisservice=http://${web_server_name}:${web_server_port}/${project_name}/ws/AxisServlet
