Changes to the build process to download, install, and deploy to the latest 4.1.x Tomcat and MySQL versions, per the SCM Technology Stack spreadsheet.
SVN-Revision: 338

--- a/build.properties
+++ b/build.properties
@@ -12,6 +12,15 @@ dir.model=models/xmi
 
 #################################################################################
 #
+#  SDK TEMPORARY DOWNLOAD FOLDERS
+#
+#################################################################################
+
+dir.temp=temp
+dir.temp.zip=${dir.temp}/zip
+
+#################################################################################
+#
 #  CUSTOM SOURCE FOLDERS
 #
 #################################################################################
@@ -27,7 +36,9 @@ dir.src.custom.lib=${dir.src.custom.project}/lib
 #
 #################################################################################
 dir.conf=conf
+dir.conf.download=${dir.conf}/download
 dir.conf.scripts=${dir.conf}/build-scripts
+dir.conf.database-scripts=${dir.conf}/database-scripts
 dir.conf.template=${dir.conf}/codegen/template
 dir.conf.control=${dir.conf}/codegen/control-files
 dir.conf.spring=${dir.conf}/spring
@@ -67,6 +78,7 @@ dir.output.project.doc=${dir.output.project}/doc
 
 dir.output.conf=${dir.output.project}/${dir.conf}
 dir.output.conf.scripts=${dir.output.project}/${dir.conf.scripts}
+dir.output.conf.database-scripts=${dir.output.project}/${dir.conf.database-scripts}
 dir.output.conf.control=${dir.output.project}/${dir.conf.control}
 dir.output.conf.template=${dir.output.project}/${dir.conf.template}
 dir.output.conf.spring=${dir.output.project}/${dir.conf.spring}
