--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -17,14 +17,16 @@
 #   BASIC PROPERTIES
 #
 ################################################################################
-
+java_home=C:/java/j2sdk1.4.2_08
 ######################################
 #
 #   SYSTEM PROPERTIES
 #
 ######################################
-mysql_home=C:/mysql
-j2se_container_home=c:/jboss-4.0.4.GA
+mysql_home=C:/mysql/mysql-4.1.21
+#j2se_container_home=c:/jboss-4.0.4.GA
+j2se_container_home=c:/tomcat/${tomcat.unzip.path}
+#j2se_container_home=c:/jboss-4.0.4.GA
 
 ######################################
 #
@@ -59,11 +61,12 @@ xmi_preprocessor=gov.nih.nci.codegen.core.util.EAXMIPreprocessor
 # "jboss" or "tomcat"
 #
 ######################################
-install_tomcat=no
+install_tomcat=yes
 web_server_name=localhost
 web_server_port=8080
 
-container_type=jboss
+container_type=tomcat
+#container_type=jboss
 jboss_configuration=default
 
 start_container=yes
@@ -90,11 +93,11 @@ start_mysql=yes
 #  MySQL SPECIFIC PROPERTIES
 #
 ######################################
-install_mysql=no
-create_mysql_user=no
+install_mysql=yes
+create_mysql_user=yes
 
-create_schema=no
-import_data=no
+create_schema=yes
+import_data=yes
 ddl_filename=cabioexampleschma.SQL
 datadump_name=cabioexampledata.SQL
 
@@ -103,10 +106,10 @@ datadump_name=cabioexampledata.SQL
 #  CACHING PROPERTIES
 #
 ######################################
-create_cache=yes
+create_cache=no
 #cachepath=C:/tomcat/temp/cache
-
-cachepath=C:/jboss-4.0.4.GA/cache/cache
+#cachepath=C:/jboss-4.0.2/cache/cache
+#cachepath=C:/jboss-4.0.4.GA/cache/cache
 #cachepath=/usr/local/jboss-4.0.2/server/default/log/cache
 
 
@@ -118,6 +121,9 @@ cachepath=C:/jboss-4.0.4.GA/cache/cache
 #  These values are used by the SDK implementation of the Common Security Module
 #
 ################################################################################
+# Determines if the security provided through CSM is enabled or disabled. 
+# 1 indicates security on by default, 0 indicates security off by default
+default_security_level=0
 
 
 ######################################
