--- a/conf/resources/client/log4j.properties
+++ b/conf/resources/client/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger==ERROR, clientLog
+log4j.rootLogger=ERROR,clientLog
 
 
 ### direct messages to file hibernate.log ###
@@ -39,3 +39,5 @@ log4j.logger.org.hibernate.tool.hbm2ddl=debug
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
 #log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
+
+log4j.logger.gov.nih.nci=debug
