Changed default values
SVN-Revision: 349

--- a/conf/deploy.properties
+++ b/conf/deploy.properties
@@ -24,8 +24,8 @@ java_home=C:/java/j2sdk1.4.2_08
 #
 ######################################
 mysql_home=C:/mysql/mysql-4.1.21
-#j2se_container_home=c:/jboss-4.0.4.GA
-j2se_container_home=c:/tomcat/${tomcat.unzip.path}
+j2se_container_home=c:/jboss-4.0.4.GA
+#j2se_container_home=c:/tomcat/${tomcat.unzip.path}
 #j2se_container_home=c:/jboss-4.0.4.GA
 
 ######################################
@@ -61,12 +61,12 @@ xmi_preprocessor=gov.nih.nci.codegen.core.util.EAXMIPreprocessor
 # "jboss" or "tomcat"
 #
 ######################################
-install_tomcat=yes
+install_tomcat=no
 web_server_name=localhost
 web_server_port=8080
 
-container_type=tomcat
-#container_type=jboss
+#container_type=tomcat
+container_type=jboss
 jboss_configuration=default
 
 start_container=yes
@@ -86,18 +86,18 @@ db_user=cabiouser
 db_password=cabio
 schema_name=cacore
 
-start_mysql=yes
+start_mysql=no
 
 ######################################
 #
 #  MySQL SPECIFIC PROPERTIES
 #
 ######################################
-install_mysql=yes
-create_mysql_user=yes
+install_mysql=no
+create_mysql_user=no
 
-create_schema=yes
-import_data=yes
+create_schema=no
+import_data=no
 ddl_filename=cabioexampleschma.SQL
 datadump_name=cabioexampledata.SQL
 
@@ -106,10 +106,10 @@ datadump_name=cabioexampledata.SQL
 #  CACHING PROPERTIES
 #
 ######################################
-create_cache=no
+create_cache=yes
 #cachepath=C:/tomcat/temp/cache
 #cachepath=C:/jboss-4.0.2/cache/cache
-#cachepath=C:/jboss-4.0.4.GA/cache/cache
+cachepath=C:/jboss-4.0.4.GA/cache/cache
 #cachepath=/usr/local/jboss-4.0.2/server/default/log/cache
 
 
@@ -121,10 +121,6 @@ create_cache=no
 #  These values are used by the SDK implementation of the Common Security Module
 #
 ################################################################################
-# Determines if the security provided through CSM is enabled or disabled. 
-# 1 indicates security on by default, 0 indicates security off by default
-default_security_level=0
-
 
 ######################################
 #
@@ -172,8 +168,6 @@ disable_writable_api_generation=yes
 
 
 
-
-
 ################################################################################
 #
 #  ADVANCED PROPERTIES
@@ -181,46 +175,4 @@ disable_writable_api_generation=yes
 #  Do not modify anything below this line unless you know what you are doing!
 #
 ################################################################################
-
-#	mysql_home=C:/mysql
-#	j2se_container_home=c:/jboss-4.0.2
-#	model_filename=cabioExampleDomainModel.xmi
-#	fix_xmi=yes
-#	xmi_preprocessor=gov.nih.nci.codegen.core.util.EAXMIPreprocessor
-#	install_tomcat=no
-#	container_type=jboss
-#	jboss_configuration=default
-#	start_container=yes
-#	start_mysql=yes
-#	install_mysql=no
-#	create_mysql_user=no
-#	create_schema=no
-#	import_data=no
-#	ddl_filename=cabioexampleschma.SQL
-#	datadump_name=cabioexampledata.SQL
-#	disable_writable_api_generation=yes
-
-
-#	OUTPUTDIR
-#	LOGICAL_MODEL				dir.model/fixed_filename
-#	INCLUDE_PACKAGE				include_package
-#	EXCLUDE_PACKAGE				exclude_package
-#	EXCLUDE_NAME				exclude_name
-#	CACHE_PATH					cachepath
-#	WEBSERVICENAME				webservice_name
-#	DEPLOYWSDD
-#	DATABASE					database_type
-#	PROJECT_NAME				project_name
-#	XSLT_PATH					project_name
-#	WEB_SERVER_NAME				web_server_name
-#	WEB_SERVER_PORT				web_server_port
-#	APPLICATION_NAME			application_name
-#	DEFAULT_SECURITY_LEVEL		default_security_level
-#	DEFAULT_SESSION_TIMEOUT		default_session_timeout
-#	DBNAME						schema_name
-#	DBUSER						db_user
-#	DBPASSWD					db_password
-#	SERVERNAME					db_server_name
-#	SECONDLEVELCACHE			create_cache
-#	SHOWSQL
 
